bynkc/tests/fixtures/negative/109_query_flatmap_not_query/src/shop/inv.bynk
context shop.inv

type Item = {
  id: Int,
}

agent A {
  key sku: String
  store items: Map[String, Item]
  on call bad() -> Effect[List[Item]] {
    items.flatMap((it) => it).collect()
  }
}
